<resources>
    <string name="app_name">ToDoApp</string>
    <string name="todo">To Do</string>
    <string name="login">Login</string>
    <string name="logo_for_app">Logo for App</string>
    <string name="register">Register</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login_page">Login Page</string>
    <string name="register_page">Register</string>
    <string name="enter_your_email_address">Enter Email address</string>
    <string name="enter_password">Enter password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="name">Name</string>
</resources>